samples/_failures_safe/1761599749_91edd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ba4255c.c:163:1: error: expected identifier or ‘(’ at end of input
  163 | void
      | ^~~~
